b=26727 r=jfrancis@netscape.com Changed MarkLineDirty() to always mark the line dirty even if it also marks the preceding line dirty